--- a/badge.html
+++ b/badge.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Badge do Evento</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
     body {
       background: #f0f2f5;
       font-family: 'Inter', sans-serif;
@@ -12,7 +14,40 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      flex-direction: column;
+      margin: 0;
     }
+
+    #login {
+      text-align: center;
+    }
+
+    #login h2 {
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    #emailInput {
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      width: 240px;
+      margin-bottom: 10px;
+      font-size: 1rem;
+    }
+
+    button {
+      background: #e5f878;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover { background: #d4e565; }
+
     .badge {
       width: 300px;
       height: 440px;
@@ -20,63 +55,126 @@
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       overflow: hidden;
-      display: flex;
+      display: none;
       flex-direction: column;
       justify-content: space-between;
     }
-    .photo img { width: 100%; height: 100%; object-fit: cover; }
-    .info { padding: 18px 20px; text-align: left; }
-    .name { font-size: 1.6rem; font-weight: 600; }
-    .company { font-size: 0.95rem; color: #444; }
+
+    .photo {
+      position: relative;
+      height: 55%;
+      overflow: hidden;
+      background: #e8e9ed;
+    }
+
+    .photo img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .info {
+      padding: 18px 20px;
+      text-align: left;
+    }
+
+    .welcome { font-size: 0.9rem; color: #555; margin-bottom: 4px; }
+
+    .name {
+      font-size: 1.6rem;
+      font-weight: 600;
+      color: #111;
+      line-height: 1.1;
+    }
+
+    .company { font-size: 0.95rem; color: #444; margin-top: 4px; }
+
+    .footer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 18px 14px;
+      border-top: 1px solid #252525;
+    }
+
+    .logos {
+      display: flex;
+      align-items: center;
+      gap: 80px;
+    }
+
+    .logos img { height: 40px; width: auto; opacity: 0.95; }
   </style>
 </head>
 <body>
 
-  <div class="badge" id="badge" style="display:none;">
-    <div class="photo"><img id="foto" src="" alt="Foto"></div>
+  <div id="login">
+    <h2>Verifica o teu badge</h2>
+    <input type="email" id="emailInput" placeholder="Insere o teu e-mail institucional">
+    <br>
+    <button onclick="verificarEmail()">Ver badge</button>
+  </div>
+
+  <div class="badge" id="badge">
+    <div class="photo">
+      <img id="foto" src="images/default-profile.jpg" alt="Foto">
+    </div>
     <div class="info">
       <div class="welcome">Bem-vindo</div>
       <div class="name" id="nome"></div>
       <div class="company" id="empresa"></div>
     </div>
+    <div class="footer">
+      <div class="logos">
+        <img src="images/logo.png" alt="Logo 1">
+        <img src="images/logo.png" alt="Logo 2">
+      </div>
+    </div>
   </div>
 
   <script>
-    async function carregarBadge() {
-      const params = new URLSearchParams(window.location.search);
-      const emailOuId = params.get("id")?.toLowerCase() || params.get("email")?.toLowerCase();
+    // Carrega badge automaticamente se já houver login guardado
+    window.onload = async () => {
+      const emailGuardado = localStorage.getItem("emailUtilizador");
+      if (emailGuardado) {
+        await mostrarBadge(emailGuardado);
+      }
+    };
 
-      if (!emailOuId) {
-        document.body.innerHTML = "<h3>QR Code inválido ou sem identificação.</h3>";
+    async function verificarEmail() {
+      const email = document.getElementById("emailInput").value.trim().toLowerCase();
+      if (!email) {
+        alert("Por favor insere o teu e-mail.");
         return;
       }
+      await mostrarBadge(email);
+      localStorage.setItem("emailUtilizador", email); // guarda o login
+    }
 
+    async function mostrarBadge(email) {
       try {
         const resposta = await fetch("dados.json");
         const dados = await resposta.json();
+        const pessoa = dados.find(p => p.email.toLowerCase() === email);
 
-        // procura por ID ou e-mail
-        const pessoa = dados.find(p =>
-          (p.id && p.id.toString() === emailOuId) ||
-          (p.email && p.email.toLowerCase() === emailOuId)
-        );
-
-        if (!pessoa) {
-          document.body.innerHTML = "<h3>Participante não encontrado.</h3>";
-          return;
+        if (pessoa) {
+          document.getElementById("login").style.display = "none";
+          const badge = document.getElementById("badge");
+          badge.style.display = "flex";
+          document.getElementById("foto").src = pessoa.foto && pessoa.foto.trim()
+            ? pessoa.foto
+            : "https://i.imgur.com/DaxlryZ.jpeg";
+          document.getElementById("nome").textContent = pessoa.nome;
+          document.getElementById("empresa").textContent = pessoa.empresa;
+        } else {
+          alert("E-mail não encontrado. Tenta novamente com o e-mail institucional.");
+          localStorage.removeItem("emailUtilizador");
         }
-
-        document.getElementById("badge").style.display = "flex";
-        document.getElementById("foto").src = pessoa.foto || "https://i.imgur.com/DaxlryZ.jpeg";
-        document.getElementById("nome").textContent = pessoa.nome;
-        document.getElementById("empresa").textContent = pessoa.empresa;
       } catch (err) {
         console.error(err);
-        document.body.innerHTML = "<h3>Erro ao carregar dados. Verifica a ligação ao servidor.</h3>";
+        alert("Erro ao carregar os dados. Verifica se o ficheiro 'dados.json' está na mesma pasta.");
       }
     }
-
-    carregarBadge();
   </script>
 </body>
 </html>
